# capture-video-visualizer

./: AUDIO_Y_RECONEXION.md  CHANGELOG.md  COMO_FUNCIONA_VIDEO.md  COMPILACION.md  README.md  RESUMEN.md  Requeriments.md
.github/workflows/: create-release.yaml
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: camera.rs  lib.rs
src/components/: VideoControls.jsx  VideoPlayer.jsx
src/hooks/: useVideoDevices.js
