[package]
name = "capture-video-visualizer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "capture_video_visualizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nokhwa = { version = "0.10.6", features = ["input-native"] }
tokio = { version = "1.37", features = ["full"] }
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["cors"] }
image = "0.25.1"
lazy_static = "1.4.0"
tokio-stream = { version = "0.1.18", features = ["sync"] }
futures-util = "0.3.31"

